--- a/index.html
+++ b/index.html
@@ -1,12 +1,150 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/b5d7d6dd45.js" crossorigin="anonymous"></script>
+
 </head>
+
 <body>
-    
+    <!-- header -->
+    <div class="container-fluid p-0" id="header">
+        <!-- upper_border -->
+        <div class="container-fluid col-12 d-flex justify-content-between px-4 pt-1" id="upper_border">
+            <div class="d-flex ">
+                <a href="" class="px-2"><i class="fa-sharp fa-regular fa-envelope "></i></a>
+                <h6>ak771842@gamil.com</h6>
+            </div>
+            <div>
+                <p class="">POWERED BY SHOPIFY FREE GIFT FREE SHIPPING AND GST INCLUSIVE PRICES</p>
+            </div>
+            <div>
+                <a href="" class="px-2"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="" class="px-2"> <i class="fa-brands fa-pinterest"></i></a>
+                <a href="" class="px-2"> <i class="fa-brands fa-instagram"></i></a>
+            </div>
+
+        </div>
+
+        <div class="col-12 d-flex justify-content-between">
+            <!-- search -->
+            <form action="" id="search_bar" class="">
+                <input type="text" class="" name="" id="" placeholder="search">
+                <i class="fa-solid fa-magnifying-glass "></i>
+            </form>
+
+            <!-- logo -->
+            <div>
+                <i class="fa-brands fa-css3-alt fa-2xl p-3"></i>
+            </div>
+
+            <!-- cart -->
+            <div>
+                <i class="fa-solid fa-cart-shopping p-3"></i>
+                <i class="fa-solid fa-rectangle-list p-3"></i>
+                <i class="fa-solid fa-user-plus p-3"></i>
+            </div>
+
+        </div>
+        <!-- navbar -->
+
+        <div class="col-12"  >
+            <div class="container-fluid  " id="navBar">
+                <ul >
+                    <li ><a href="">Wall clock</a>
+                    </li>
+                    <li><a href="">Wall Art</a>
+                    </li>
+                    <li><a href="">Canvas paintings</a>
+                    </li>
+                    <li><a href="">Lamps</a>
+                    </li>
+                    <li><a href="">Mirrors</a>
+                    </li>
+                    <li><a href="">Unique Decor & Furniture</a></li>
+                    <li> <a href="">Kids Section</a>
+                    </li>
+                    <li> <a href="">Illuminated Arts</a>
+                    </li>
+                    <li><a href="">Home Garden</a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- mid_section -->
+    <section class="mid">
+        <div class="img">
+            <img src="./assest/background_image.jpg"  alt="">
+        </div>
+        <!-- text-area -->
+        <div class="ShopBytype">
+            <div class="shopbyText">
+                <h3 class="text-center p-5 fs-4">WELCOME TO ULTIMATE DESTINATION OF HOME DECOR</h3>
+                <h3 class="text-center p-3 fs-4">MAKE THE MOST OF THE ADDITIONAL - WELCOME 2023 20% DISCOUNT, APPLIED AUTOMATICALLY AT CHECKOUT
+                </h3>
+                <p class="text-center p-3 fs-6">Decorate your home with exquisite home décor products to make it desirable to anybody who comes to visit.
+                    Shop from wide range of wall art & decor items at great price.</p>
+            </div>
+        </div>
+        <!-- shopbytype -->
+        <h2 class="text-center pt-4">Shop By Type</h2>
+        <div class="typeCard">
+            <div class="card">
+                <img src="./assest/card1.jpg" class="" alt=""  width="250px" height="350px">
+            </div>
+            <div class="card">
+                <img src="./assest/card1.jpg"  class="width-5"alt="" width="250px" height="350px">
+            </div>
+
+            <div class="card">
+                <img src="./assest/card1.jpg" class="width-5" alt="" width="250px" height="350px">
+            </div>
+
+            <div class="card">
+                <img src="./assest/card1.jpg"  class="width-5"alt="" width="250px" height="350px">
+            </div>
+
+            <div class="card">
+                <img src="./assest/card1.jpg" class="width-5" alt="" width="250px" height="350px">
+            </div>
+        </div>
+
+        <!-- new_arrival -->
+        <div class="newarrival">
+            <div class="headeing">
+                <h1 class="text-center fs-4">NEW ARRIVAL</h1>
+            </div>
+            <div class="newarrivalcard typeCard px-1">
+                <div class="card ">
+                    <img src="./assest/card1.jpg" alt="" class="" width="250px" height="350px">
+                </div>
+
+                <div class="card">
+                    <img src="./assest/card1.jpg" alt=""  width="250px" height="350px">
+                </div>
+
+                <div class="card">
+                    <img src="./assest/card1.jpg" alt=""  width="250px" height="350px">
+                </div>
+
+                <div class="card">
+                    <img src="./assest/card1.jpg" alt=""  width="250px" height="350px">
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
